// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments-1.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// hi l<|>ol
function ehllooo () {
  const hi = "hi"
}

=====================================output=====================================
// hi l<|>ol
function ehllooo() {
  const hi = "hi";
}

================================================================================
`;

exports[`comments-2.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<|>
// howdy
// hi lol
const y = 5

=====================================output=====================================
<|>// howdy
// hi lol
const y = 5;

================================================================================
`;

exports[`comments-3.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/<|>/ howdy
// hi lol
const y = 5

=====================================output=====================================
/<|>/ howdy
// hi lol
const y = 5;

================================================================================
`;

exports[`comments-4.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// howdy
// hi lol
const y = 5
//  traling! <|>

=====================================output=====================================
// howdy
// hi lol
const y = 5;
//  traling!<|>

================================================================================
`;

exports[`cursor-0.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(function() {return        <|> 15})()

=====================================output=====================================
(function() {
  return <|>15;
})();

================================================================================
`;

exports[`cursor-1.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(function(){return        <|>15})()

=====================================output=====================================
(function() {
  return <|>15;
})();

================================================================================
`;

exports[`cursor-2.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

foo  <|>  (bar);

=====================================output=====================================
foo<|>(bar);

================================================================================
`;

exports[`cursor-3.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


  <|>

  const y = 5

=====================================output=====================================
<|>const y = 5;

================================================================================
`;

exports[`cursor-4.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


  const y = 5

  <|>

  const z = 9

=====================================output=====================================
const y = 5;

<|>const z = 9;

================================================================================
`;

exports[`cursor-5.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const    /* h<|>i */    y = 5

=====================================output=====================================
const /* h<|>i */ y = 5;

================================================================================
`;

exports[`cursor-6.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const      y    /* h<|>i */   = 5

=====================================output=====================================
const y /* h<|>i */ = 5;

================================================================================
`;

exports[`cursor-7.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const y = 5
<|>

const z = 9

=====================================output=====================================
const y = 5;
<|>
const z = 9;

================================================================================
`;

exports[`cursor-8.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
  func<|>tion banana(){}
=====================================output=====================================
func<|>tion banana() {}

================================================================================
`;

exports[`cursor-9.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
     thisWillBeFormatted  <|>  (2  ,3,   )
=====================================output=====================================
thisWillBeFormatted<|>(2, 3);

================================================================================
`;

exports[`cursor-10.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const y = 5




<|>
  
=====================================output=====================================
const y = 5;
<|>
================================================================================
`;

exports[`file-start-with-comment-1.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// hi<|> lol
haha()

=====================================output=====================================
// hi<|> lol
haha();

================================================================================
`;

exports[`file-start-with-comment-2.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// hi lol
haha()<|>

=====================================output=====================================
// hi lol
haha()<|>;

================================================================================
`;

exports[`range-0.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted  <|>  (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    
=====================================output=====================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted<|>(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    
================================================================================
`;

exports[`range-1.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3<|>,   )

    thisWontBeFormatted  (2, 90  ,)
    
=====================================output=====================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    
================================================================================
`;

exports[`range-2.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,  <|> )

    thisWontBeFormatted  (2, 90  ,)
    
=====================================output=====================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3<|>);

    thisWontBeFormatted  (2, 90  ,)
    
================================================================================
`;

exports[`range-3.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 90  ,)
    
=====================================output=====================================
thisWontBeFormatted <|> ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 90  ,)
    
================================================================================
`;

exports[`range-4.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted    (2  ,3,   )

    thisWontBeFormatted  (2, 9<|>0  ,)
    
=====================================output=====================================
thisWontBeFormatted  ( 1  ,3)

    thisWillBeFormatted(2, 3);

    thisWontBeFormatted  (2, 9<|>0  ,)
    
================================================================================
`;
